# nas-scripts

./: .gitignore  AGENT.md  AGENTS.md  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/workflows/: enable-auto-merge.yml  merge-gate.yml
config/: .env.example  ingest_crypto_documents.env.example
ingested/: .flowrag_ingest_state.json
scripts/: ingest_crypto_documents.py  organize_temp_downloads.py  organize_temp_media.py  sync_media_library.py
src/nas_scripts/: __init__.py  __main__.py  cli.py
src/nas_scripts/config/: __init__.py  ingest_crypto_documents.py  organize_temp_media.py  sync_media_library.py
src/nas_scripts/jobs/: __init__.py  ingest_crypto_documents.py  organize_temp_downloads.py  organize_temp_media.py  sync_media_library.py
src/nas_scripts/utils/: __init__.py  filesystem.py  flowrag.py  images.py  locking.py  logging.py  media.py  onyx.py  state.py  text.py
tests/integration/: __init__.py
tests/integration/ingest_crypto_documents/: __init__.py  test_live.py
tests/unit/: __init__.py  test_coverage_branches.py
tests/unit/config/: test_config.py
tests/unit/ingest_crypto_documents/: __init__.py  test_ingest_crypto_documents.py
tests/unit/organize_temp_media/: __init__.py  test_organize_temp_media.py
tests/unit/sync_media_library/: __init__.py  test_sync_media_library.py
tests/unit/utils/: test_logging.py
