[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nas-scripts"
version = "0.1.0"
description = "Python automation scripts for a UGREEN NASync DXP4800 Plus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=4.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests that touch external systems",
    "live: marks tests that call real services",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
